AUTOATTN-568: fix chevron in holidays collapsed view in IE

--- a/app/modules/huron/features/autoAttendant/schedule/_aa-schedule.scss
+++ b/app/modules/huron/features/autoAttendant/schedule/_aa-schedule.scss
@@ -90,7 +90,7 @@
           }
         }
         &:before {
-          content: initial;
+          content: none;
         }
         &.active {
           display: none;
